<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ksanchez.enapp.fragments.eval1_p1">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde_pregunta"
            android:padding="@dimen/layout_margin10dp"
            android:layout_margin="@dimen/layout_margin10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eval01_p01_txt"
                android:textSize="@dimen/texto_chico"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="@dimen/layout_margin10dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="16dp"
                android:src="@drawable/imgpreg1" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioGroup
                    android:id="@+id/e1_p1_rg"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/layout_margin10dp">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ev1_p1_rb1"
                        android:text="@string/eval01_p01_sub01"
                        android:layout_margin="5dp"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ev1_p1_rb2"
                        android:text="@string/eval01_p01_sub02"
                        android:layout_margin="5dp"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ev1_p1_rb3"
                        android:text="@string/eval01_p01_sub03"
                        android:layout_margin="5dp"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ev1_p1_rb4"
                        android:text="@string/eval01_p01_sub04"
                        android:layout_margin="5dp"/>

                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</FrameLayout>
