<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ksanchez.enapp.fragments.eval1_p2"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde_pregunta"
            android:padding="@dimen/layout_margin10dp"
            android:layout_margin="@dimen/layout_margin10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eval01_p02"
                android:textSize="@dimen/texto_chico"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="@dimen/layout_margin10dp"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioGroup
                    android:id="@+id/e1_p2_rg"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/layout_margin10dp">
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eval01_p02_op01"
                        android:id="@+id/ev1_p2_rb1"
                        android:layout_margin="5dp"/>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eval01_p02_op02"
                        android:id="@+id/ev1_p2_rb2"
                        android:layout_margin="5dp"/>


                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eval01_p02_op03"
                        android:id="@+id/ev1_p2_rb3"
                        android:layout_margin="5dp"/>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eval01_p02_op04"
                        android:id="@+id/ev1_p2_rb4"
                        android:layout_margin="5dp"/>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eval01_p02_op05"
                        android:id="@+id/ev1_p2_rb5"
                        android:layout_margin="5dp"/>
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde_pregunta"
            android:padding="@dimen/layout_margin10dp"
            android:layout_margin="@dimen/layout_margin10dp"
            android:weightSum="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eval01_p03"
                android:textSize="@dimen/texto_chico"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="@dimen/layout_margin10dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="519dp"
                android:src="@drawable/imgpreg3" />

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin20dp">

                <android.support.v7.widget.CardView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="@dimen/layout_margin10dp"
                    android:background="@drawable/borde_pregunta">
                    <Spinner
                        android:id="@+id/eval1_p3_sp1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawSelectorOnTop="true"
                        android:hint="Seleccione"
                        android:entries="@array/cuestionario1_pregunta_4_opciones"/>
                </android.support.v7.widget.CardView>
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/eval01_p03_op01"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin20dp">

                <android.support.v7.widget.CardView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="@dimen/layout_margin10dp"
                    android:background="@drawable/borde_pregunta">
                    <Spinner
                        android:id="@+id/eval1_p3_sp2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawSelectorOnTop="true"
                        android:entries="@array/cuestionario1_pregunta_4_opciones"/>
                </android.support.v7.widget.CardView>
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/eval01_p03_op02"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin20dp">

                <android.support.v7.widget.CardView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="@dimen/layout_margin10dp"
                    android:background="@drawable/borde_pregunta">
                    <Spinner
                        android:id="@+id/eval1_p3_sp3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawSelectorOnTop="true"
                        android:entries="@array/cuestionario1_pregunta_4_opciones"/>
                </android.support.v7.widget.CardView>
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/eval01_p03_op03"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin20dp">

                <android.support.v7.widget.CardView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="@dimen/layout_margin10dp"
                    android:background="@drawable/borde_pregunta">
                    <Spinner
                        android:id="@+id/eval1_p3_sp4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawSelectorOnTop="true"
                        android:entries="@array/cuestionario1_pregunta_4_opciones"/>
                </android.support.v7.widget.CardView>
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/eval01_p03_op04"/>
            </LinearLayout>
        </LinearLayout>


        </LinearLayout>


</LinearLayout>
